[project]
name = "todolist-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Pedro Schiavoni",email = "joaopschiavoni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = """
-p no:warnings
--cov=todolist_api
--cov-report=term-missing
--cov-report=html
"""
testpaths = ["tests"]


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev todolist_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv'
post_test = 'coverage html --source=todolist_api'
delete_old_cov = 'rm -rf .coverage htmlcov'

